feat: add download completed recording button
